data/all_generated_tests/raw_wast_tests/br_table_UnreachableCodeExecution_2135.wast
;; 5. **Test with Forward and Backward Branching:**     - Description: Create a `br_table` instruction that branches both forward and backward, ensuring both types of branches handle the operand stack according to the block's type.    - Constraint Checked: Handling of forward and backward branches with respect to operand stack types.    - Relates to Unreachable Code Execution: Incorrect type matching or stack handling can cause misconfiguration leading to the execution of the `unreachable` instruction.

(assert_invalid
  (module (func $forward-backward-branch
    (block $outer (result i32)
      (block $inner (result i32)
        (i32.const 42)
        (br_table $inner $outer (i32.const 1) (i64.const 0)) 
        (i32.const 0)
      )
    )
  ))
  "type mismatch"
)